@@ -19,11 +19,13 @@ def register():
         payment.Journal,
         payment.Group,
         payment.Payment,
+        payment.CustomerSourceDetachAsk,
         party.Party,
         ir.Cron,
         module='account_payment_stripe', type_='model')
     Pool.register(
         payment.Checkout,
+        payment.CustomerSourceDetach,
         party.Replace,
         module='account_payment_stripe', type_='wizard')
     Pool.register(
