@@ -1,3 +1,4 @@
+* Add wizard to delete customer source
 * Add webhook for payment intent canceled
 
 Version 5.6.0 - 2020-05-04
